--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.32.0",
@@ -25,6 +27,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "jsonwebtoken": "^9.0.1",
+    "ll": "^1.2.0",
     "lucide-react": "^0.263.1",
     "next": "^13.4.12",
     "react": "^18.2.0",
