--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,7 @@ JWT_EXPIRES_IN=7d
 # Chroma Vector DB設定
 CHROMA_HOST=chroma
 CHROMA_PORT=8000
+CHROMA_PERSIST_DIR=./vector-db/data
 
 # AI関連設定
 OPENAI_API_KEY=your-api-keys
@@ -22,3 +23,7 @@ OPENAI_API_KEY=your-api-keys
 # Backlog API設定
 BACKLOG_API_KEY=your-backlog-api-key
 BACKLOG_SPACE=your-backlog-space
+
+# Webhook設定
+WEBHOOK_BASE_URL=http://localhost:3001  # ngrokを使用する場合は更新が必要
+WEBHOOK_SECRET=your_webhook_secret      # WebhookのHTTPリクエスト検証用
