--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
