--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,11 +25,15 @@
     }
   },
   "forwardPorts": [3000, 3001, 3306, 8000, 8080],
-  "postCreateCommand": "npm install && cd frontend && npm install && cd ../backend && npm install && chmod 600 /home/node/.ssh/id_rsa 2>/dev/null || true",
+  "postCreateCommand": "npm install && cd frontend && npm install && cd ../backend && npm install && find /home/node/.ssh -type f -name 'id_*' ! -name '*.pub' -exec chmod 600 {} \\; && find /home/node/.ssh -type f -name 'id_*.pub' -exec chmod 644 {} \\; && find /home/node/.ssh -type f -name 'config' -exec chmod 644 {} \\; && find /home/node/.ssh -type f -name 'known_hosts' -exec chmod 644 {} \\;",
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
       "version": "18"
     },
     "ghcr.io/devcontainers/features/docker-in-docker:2": {}
-  }
+  },
+  "mounts": [
+    "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+    
+  ]
 }
