--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --config nodemon.json",
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
