--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.0.3",
+    "@radix-ui/react-separator": "1.1.2",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
