--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,10 @@
     "typeorm": "^0.3.17",
     "zod": "^3.21.4",
     "chroma-js": "^2.1.1",
-    "glob": "^10.3.10"
+    "glob": "^10.3.10",
+    "pdfmake": "^0.2.8",
+    "pg": "8.14.0",
+    "exceljs": "4.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -46,6 +49,7 @@
     "@types/lodash": "^4.14.196",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.5",
+    "@types/pdfmake": "0.2.11",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
