--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
     "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:reset": "node scripts/reset-migrations.js",
+    "migration:revert-all": "ts-node scripts/revert-all-migrations.js",
     "ngrok": "ngrok http 3001",
     "setup-ngrok": "node scripts/setup-ngrok.js",
     "fix-ngrok-config": "node scripts/fix-ngrok-config.js",
@@ -19,16 +21,16 @@
     "dev:with-ngrok": "concurrently \"npm run dev\" \"npm run ngrok\""
   },
   "dependencies": {
-    "@langchain/community": "^0.0.10",
-    "@langchain/core": "^0.1.4",
-    "@langchain/openai": "^0.0.12",
+    "@langchain/community": "^0.3.0",
+    "@langchain/core": "^0.3.0",
+    "@langchain/openai": "^0.3.0",
     "bcrypt": "^5.1.0",
     "chromadb": "^1.5.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "langchain": "^0.1.0",
+    "langchain": "^0.3.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
