--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,13 @@ CHROMA_PERSIST_DIR=./vector-db/data
 # AI関連設定
 OPENAI_API_KEY=your-api-keys
 
+# Google API
+GOOGLE_API_KEY=your-google-api-key
+GOOGLE_CSE_ID=your-google-cse-id
+
+# 拡張レビュー機能の有効化/無効化
+ENABLE_ENHANCED_REVIEW=true
+
 # Backlog API設定
 BACKLOG_API_KEY=your-backlog-api-key
 BACKLOG_SPACE=your-backlog-space
@@ -27,3 +34,20 @@ BACKLOG_SPACE=your-backlog-space
 # Webhook設定
 WEBHOOK_BASE_URL=http://localhost:3001  # ngrokを使用する場合は更新が必要
 WEBHOOK_SECRET=your_webhook_secret      # WebhookのHTTPリクエスト検証用
+
+# Node.js garbage collection tuning
+NODE_OPTIONS=--max-old-space-size=4096 --expose-gc
+
+# TypeORM設定の最適化
+TYPEORM_CONNECTION_POOL_SIZE=10
+TYPEORM_LOGGING=false
+TYPEORM_SYNC_MIGRATIONS_RUN=false
+
+# バックエンドのタイムアウト設定
+API_TIMEOUT=30000
+CHROMA_TIMEOUT=60000
+DATABASE_TIMEOUT=10000
+
+# バッチサイズの制限
+BATCH_SIZE=100
+MAX_CONCURRENT_PROCESSES=5
