--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@langchain/community": "^0.3.0",
     "@langchain/core": "^0.3.0",
     "@langchain/openai": "^0.3.0",
+    "@langchain/anthropic": "0.3.15",
     "bcrypt": "^5.1.0",
     "chromadb": "^1.5.5",
     "cors": "^2.8.5",
