add_responseAI_withStreaming

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,7 @@ CHROMA_PERSIST_DIR=./vector-db/data
 
 # AI関連設定
 OPENAI_API_KEY=your-api-keys
+OPENAI_MODEL=your-model
 ANTHROPIC_API_KEY=your-api-keys
 
 # Google API
