--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "setup-ngrok": "node scripts/setup-ngrok.js",
     "fix-ngrok-config": "node scripts/fix-ngrok-config.js",
     "detect-ngrok": "node scripts/detect-ngrok.js",
-    "dev:with-ngrok": "concurrently \"npm run dev\" \"npm run ngrok\""
+    "dev:with-ngrok": "concurrently \"npm run dev\" \"npm run ngrok\"",
+    "setup-fonts": "node scripts/setup-font-dirs.js"
   },
   "dependencies": {
     "@langchain/community": "^0.3.0",
