--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "remark-gfm": "4.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
+    "tailwindcss-typography": "3.1.0",
     "uuid": "^11.1.0",
     "zod": "^3.21.4"
   },
@@ -57,6 +58,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-syntax-highlighter": "15.5.13",
+    "@tailwindcss/typography": "0.5.16",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.12",
