--- a/backend/.env.example
+++ b/backend/.env.example
@@ -37,6 +37,12 @@ BACKLOG_SPACE=your-backlog-space
 WEBHOOK_BASE_URL=http://localhost:3001  # ngrokを使用する場合は更新が必要
 WEBHOOK_SECRET=your_webhook_secret      # WebhookのHTTPリクエスト検証用
 
+# Github
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+GITHUB_REDIRECT_URI=http://localhost:3001/api/github/callback
+GITHUB_WEBHOOK_SECRET=your-github-webhook-secret
+
 # Node.js garbage collection tuning
 NODE_OPTIONS=--max-old-space-size=4096 --expose-gc
 
